Made list on index page

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
     <body>
         <h1>How to preprepare to be a Computer Science Major</h1>
-        <p>Do a lot of CS stuff</p>
+        <ul>
+            <li>Read CS stuff</li>
+            <li>Watch CS stuff</li>
+            <li>Practic CS stuff</li>
+        </ul>
     </body>
 </html>
