--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,7 @@
             <li>Read CS stuff</li>
             <li>Watch CS stuff</li>
             <li>Practic CS stuff</li>
+            <li>Do Tutorials</li>
         </ul>
     </body>
 </html>
