--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="style.css" />
+        <meta charset="UTF-8" />
+        <title>Become a Computer Science Major</title>
+    </head>
     <body>
-        <h1>How to preprepare to be a Computer Science Major</h1>
-        <ul>
-            <li>Read CS stuff</li>
-            <li>Watch CS stuff</li>
-            <li>Practic CS stuff</li>
-            <li>Do Tutorials</li>
+      <div>
+        <ul class="nav">
+        <li><a href="why.html">Why CS</a></li>
+        <li><a href="career.html">Career</a></li>
+        <li><a href="learn.html">Learn</a></li
         </ul>
+      </div>
+        <h1>Become a Computer Science Major</h1>
+        <div class="text_heading">
+            <p>
+                Computer Science is a great field to study in College.
+            </p>
+            <img src="images/cs.jpg" alt="CS Words">
+        </div>
+        
     </body>
 </html>
