--- a/source/why.html
+++ b/source/why.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
 <meta charset="UTF-8">
-<title>David North : Family Man</title>
+<title>Why CS</title>
 </head>
 <body>
   <div>
