--- a/source/why.html
+++ b/source/why.html
@@ -13,7 +13,7 @@
     <li><a href="learn.html">Learn</a></li
     </ul>
   </div>
-<h1>Why Computer Science</h1>
+<h1>Why do Computer Science</h1>
 
 </body>
 </html>
