--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" type="text/css" href="style.css" />
         <meta charset="UTF-8" />
-        <title>Become a Computer Science Major</title>
+        <title>Become a Great Computer Science Major</title>
     </head>
     <body>
       <div>
