--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
         <h1>Become a Computer Science Major</h1>
         <div class="text_heading">
             <p>
-                Computer Science is a great field to study in College.
+                Computer Science is a great field to study in College. There will be lots of jobs in CS.
             </p>
             <img src="images/cs.jpg" alt="CS Words">
         </div>
